# mfb_dxf

./: .env  main.py  pyproject.toml  styles.json
src/: convertor.py  cxm_props.py
